[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "pyconfig"
version = "0.0.0"
readme = "README.md"
license = { file = "LICENSE" }
urls = { repository = "https://github.com/mac-brand-spaces/pyconfig" }

[tool.setuptools]
packages = [
  "pyconfig",
]
package-data = { pyconfig = ["py.typed"] }

[project.scripts]


